compiler/testData/asJava/lightClasses/compilationErrors/WrongAnnotations.java
public final class A {
    public static final A.Companion Companion;

    public A() { /* compiled code */ }

    @kotlin.jvm.JvmStatic
    public static final void f3() { /* compiled code */ }

    public static final class Companion {
        @kotlin.jvm.JvmName(name = "realName")
        public final void realName() { /* compiled code */ }

        @kotlin.jvm.JvmName(name = 1)
        public final void f2() { /* compiled code */ }

        @kotlin.jvm.JvmStatic
        public final void f3() { /* compiled code */ }

        @kotlin.jvm.JvmName
        public final void f4() { /* compiled code */ }

        @kotlin.jvm.JvmOverloads
        public final void f5() { /* compiled code */ }

        @kotlin.jvm.JvmOverloads
        public final void f6() { /* compiled code */ }

        private Companion() { /* compiled code */ }
    }
}
